work/61/Chain_Java/compile_stderr.txt
myMath/Function.java:6: error: ';' expected
		return x*x
		          ^
1 error
